# workflow-orchestration-queue-echo19

./: .ai-repository-summary.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-results-pester.xml
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: os-apow-application-plan.md
docs/progress/: progress-init-existing-repository.md
plan_docs/: OS-APOW Architecture Guide v3.md  OS-APOW Development Plan v4.md  OS-APOW Implementation Specification v1.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/interfaces/: __init__.py  i_task_queue.py
src/models/: __init__.py  github_events.py  work_item.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_github_events.py  test_work_item.py
